# IA-udg

./: LICENSE  README.md
p1/: .gitignore  README.md  p1.py  pyproject.toml
p1/codi_A/: executa_hill_climbing.py
p1/codi_A/algoritmes/: algoritme_cerca_local.py  hill_climbing.py
p1/codi_A/codi_A/: executa_hill_climbing.py
p1/codi_A/problemes/: el_meu_problema.py  problema.py
p2/: domain_avancat1.pddl  domain_simple.pddl  pb_avancat1a.pddl  pb_avancat1b.pddl  pb_avancat1c.pddl  pb_avancat2a.pddl  pb_avancat2b.pddl  pb_simple_a.pddl  pb_simplea.pddl  pb_simpleb.pddl  pb_simplec.pddl
