[project]
name = "p1"
version = "0.1.0"
description = "Programa per coordinar donacions inter-hospitalàries"
authors = [
    {name = "Sebastian J. Gutierrez Llorca",email = "zerreytug.gll@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "Yes"
dependencies = [
    "numpy"
]

[tool.poetry]
packages = [{include = "pyproject"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
